--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/nmische/notebook">View on GitHub</a>
+<!--      
+					<a id="forkme_banner" href="https://github.com/nmische/notebook">View on GitHub</a>
+-->
 
           <h1 id="project_title">Notebook</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">Reference Architecture</h2>
 <!--
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/nmische/notebook/zipball/master">Download this project as a .zip file</a>
@@ -32,7 +34,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>In this document I propose a reference architecture based on <a href="http://aws.amazon.com/">Amazon Web Services (AWS)</a> for a LAMP website that is a simple user notebook.</p>
+        <p>In this document I propose an architecture based on <a href="http://aws.amazon.com/">Amazon Web Services (AWS)</a> for a LAMP website that is a simple user notebook.</p>
 
 <p>The notebook website is a multi-tenant web application where users can login and then create, view, edit, and save any number of text strings (“notes”).  Notes may be private or public and users can perform full text search on all public notes. The website has 1 million active users.</p>
 
