Need not needs.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <h3>
 <a name="hardware-failure" class="anchor" href="#hardware-failure"><span class="octicon octicon-link"></span></a>Hardware Failure</h3>
 
-<p>Hardware failures in the AWS cloud are a given and needs to planned for accordingly.  I will discuss failure detection and remediation for each layer of the infrastructure in turn.</p>
+<p>Hardware failures in the AWS cloud are a given and need to planned for accordingly.  I will discuss failure detection and remediation for each layer of the infrastructure in turn.</p>
 
 <h4>
 <a name="route-53" class="anchor" href="#route-53"><span class="octicon octicon-link"></span></a>Route 53</h4>
